# python-r-cpp

./: Dockerfile  README.md
.github/workflows/: python-r-cpp.yaml
env/: Dockerfile_runtime_python  Dockerfile_runtime_r  docker-compose.yml
env/python/: Dockerfile  python_path.txt
env/r/: Dockerfile
python_proj/py_cpp_sample/: .coveragerc  MANIFEST.in  README.md  mypy.ini  pylintrc  setup.cfg  setup.py
python_proj/py_cpp_sample/patch/: Doxyfile.diff  conf.py.diff  index.rst.diff
python_proj/py_cpp_sample/src/cpp_impl/: popcount.cpp  popcount.h  popcount.hpp  popcount_impl.cpp
python_proj/py_cpp_sample/src/cpp_impl_boost/: popcount_boost.cpp  popcount_boost.h  popcount_boost.hpp  popcount_impl_boost.cpp
python_proj/py_cpp_sample/src/py_cpp_sample/: __init__.py  main.py
python_proj/py_cpp_sample/tests/: CMakeLists.txt  CMakeLists.txt.in  ClangOverrides.txt  test_main.py  test_popcount.cpp  test_popcount.h
r_proj/rCppSample/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.Rmd  README.md
r_proj/rCppSample/R/: catch-routine-registration.R  r_cpp_sample.R
r_proj/rCppSample/man/: popcount.Rd  popcount_cpp_integer.Rd  popcount_cpp_raw.Rd
r_proj/rCppSample/src/: Makevars  Makevars.clang  popcount.cpp  popcount.h  popcount.hpp  popcount_impl.h  test-popcount.cpp  test_popcount.h
r_proj/rCppSample/tests/: CMakeLists.txt  ClangOverrides.txt  test_popcount.cpp  test_popcount.h  test_popcount.hpp  testthat.R
r_proj/rCppSample/tests/testthat/: test-cpp.R  test-popcount.R
r_proj/tests/: measure_cloc.R  r_tests.R
