[metadata]
name = py_cpp_sample
version = 0.0.1
author = Zettsu Tatsuya
author_email = zettsu.tatsuya@gmail.com
description = A sample C++ app
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: C++
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cpp, sample, development

[options]
install_requires = numpy
python_requires = >=3.8, <4
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev = autopep8; check-manifest; find_libpython; flake8; mypy; numpy; pep8; pipenv; pybind11; pybind11-global; pylint; py_pkg; sphinx; sphinx_rtd_theme; types-PyYAML; types-requests
test = coverage; pytest; pytest-benchmark; pytest-cov
